<resources>
    <string name="shop_name">Shoes shop</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="create_account_button">"No account yet? Create one now!"</string>
    <string name="cancel">Cancel</string>
    <string name="create_account_button_registration">"Create account"</string>

    <string name="woman_shoes">Women</string>
    <string name="man_shoes">Men</string>
    <string name="bags">Bags</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="old_password">old password</string>
    <string name="new_passwod">new password</string>
    <string name="confirm_new_passwrd">confirm new password</string>
    <string name="contacts">Contacts</string>
    <string name="welcome">Welcome, User!</string>
    <string name="home_page">Home</string>
    <string name="registration_page">Registration</string>
    <string name="successful_reg_text">"You'r registration was successfully created! Click Home button below to go to your Home Page."</string>
    <string name="strong_password_expectations">"A strong password should contains at least 5 symbols( small letters, capital letters and digits)"</string>
    <string name="match_passwords">"The new password and confirmation password do not match."</string>

    <string name="app_name">ShoesShop</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
