<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioana.projectshoesshop.SuccessfulRegistrationActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            style="@style/VerticalLinearLayoutOrientation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/successful_reg_text"/>

        <Button
            android:id="@+id/home_page_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_page"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
